[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Scene 1.gd" type="Script" id=2]
[ext_resource path="res://Import/sign.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Carrot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Import/GUI_Sound_Effects_by_Lokif/click_2.wav" type="AudioStream" id=5]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=1]
resource_name = "click"
length = 0.1
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 600 )

[node name="Scene 1" type="Node2D"]
script = ExtResource( 2 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 206.627, 122.212 )

[node name="sign" type="Sprite" parent="YSort"]
position = Vector2( 130.367, 466.755 )
texture = ExtResource( 3 )

[node name="Carrot" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 898, 490 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 791.0
margin_bottom = 150.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 791.0
margin_bottom = 150.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 741.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpTitle" type="RichTextLabel" parent="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Speed[/center]"
text = "Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="RichTextLabel" parent="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 358.0
margin_bottom = 50.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="ScTitle" type="RichTextLabel" parent="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 362.0
margin_right = 462.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Score[/center]"
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="RichTextLabel" parent="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 466.0
margin_right = 566.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 570.0
margin_right = 691.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = ExtResource( 6 )
text = "Restart"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/click = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 285.671 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 509.117, -11.3137 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 523.259, 599.627 )
rotation = -1.57079
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1032.38, 302.642 )
rotation = 3.14159
shape = SubResource( 2 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
